Phuc | Format code
