# docs/swagger.json
@@ -8,6 +8,43 @@
     "host": "localhost:8000",
     "basePath": "/api",
     "paths": {
+        "/auth/google": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Log in with Google",
+                "responses": {}
+            }
+        },
+        "/auth/google/callback": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Google callback",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "consumes": [
@@ -144,50 +181,13 @@
                 }
             }
         },
-        "/google": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Log in with Google",
-                "responses": {}
-            }
-        },
-        "/google/callback": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Google callback",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/permissions": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Permission"
+                    "Role \u0026 Permission"
                 ],
                 "summary": "Get list of permissions by group",
                 "responses": {
@@ -206,7 +206,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role"
+                    "Role \u0026 Permission"
                 ],
                 "summary": "Get list of roles",
                 "responses": {
@@ -253,7 +253,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role"
+                    "Role \u0026 Permission"
                 ],
                 "summary": "Update a role",
                 "parameters": [
@@ -308,7 +308,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role"
+                    "Role \u0026 Permission"
                 ],
                 "summary": "Create a new role",
                 "parameters": [
@@ -364,7 +364,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role"
+                    "Role \u0026 Permission"
                 ],
                 "summary": "Delete roles",
                 "parameters": [
@@ -409,7 +409,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Role"
+                    "Role \u0026 Permission"
                 ],
                 "summary": "Get role by ID",
                 "parameters": [
@@ -496,6 +496,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -543,6 +548,7 @@
             "type": "object",
             "properties": {
                 "data": {},
+                "errors": {},
                 "message": {
                     "type": "string"
                 },
@@ -675,7 +681,8 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 6
                 }
             }
         },
