# internal/module/auth/controller.go
@@ -50,6 +50,63 @@ func (contl *AuthController) RegisterRoutes(rg *gin.RouterGroup) {
 	authGroup.GET("/google/callback", contl.GoogleCallback)
 }
 
+// Login godoc
+//
+//	@Summary	Login a user
+//	@Tags		Auth
+//	@Accept		json
+//	@Produce	json
+//	@Param		body	body		models.LoginRequest	true	"Login request"
+//	@Success	200		{object}	models.APIResponse{data=models.LoginResponse}
+//	@Failure	400		{object}	models.APIResponse
+//	@Router		/auth/login [post]
+func (contl *AuthController) Login(ctx *gin.Context) {
+	var req models.LoginRequest
+
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		response := lib.InvalidBodyRequestError
+
+		if validationErrors := lib.ParseValidationErrors(err); validationErrors != nil {
+			response.SetErrors(validationErrors)
+			lib.SendErrorResponse(ctx, response)
+			return
+		}
+
+		lib.SendErrorResponse(ctx, response)
+		return
+	}
+
+	user, err := contl.AuthService.Login(&req)
+	if err != nil {
+		ctx.Error(lib.InternalServerError.WithStack(err.Error()))
+		return
+	}
+
+	session := &models.Session{
+		UserID:    user.ID,
+		IpAddress: ctx.ClientIP(),
+		UserAgent: ctx.Request.UserAgent(),
+		ExpiredAt: lib.SESSION_EXPIRED_TIME,
+	}
+	session, err = contl.SessionService.CreateSession(session)
+	if err != nil {
+		ctx.Error(lib.InternalServerError.WithStack(err.Error()))
+		return
+	}
+
+	tokens, err := contl.AuthService.GenerateJwtTokens(&models.UserWithClaims{
+		UserID:    user.ID,
+		SessionID: session.ID,
+	})
+	if err != nil {
+		ctx.Error(lib.InternalServerError.WithStack(err.Error()))
+		return
+	}
+
+	ctx.SetCookie("rt", tokens.RefreshToken, int(lib.REFRESH_TOKEN_TTL_DURATION), "/", "", true, true)
+	lib.SendSucceedResponse(ctx, &models.LoginResponse{User: *user, AccessToken: tokens.AccessToken})
+}
+
 // RefreshToken godoc
 //
 //	@Summary	Refresh token
@@ -72,7 +129,7 @@ func (contl *AuthController) RefreshToken(ctx *gin.Context) {
 	}
 
 	tokens, err := contl.AuthService.GenerateJwtTokens(&models.UserWithClaims{
-		User:      userWithClaims.User,
+		UserID:    userWithClaims.UserID,
 		SessionID: userWithClaims.SessionID,
 	})
 	if err != nil {
@@ -160,7 +217,15 @@ func (contl *AuthController) Register(ctx *gin.Context) {
 	var req models.RegisterRequest
 
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.Error(lib.InvalidBodyRequestError.WithStack(err.Error()))
+		response := lib.InvalidBodyRequestError
+
+		if validationErrors := lib.ParseValidationErrors(err); validationErrors != nil {
+			response.SetErrors(validationErrors)
+			lib.SendErrorResponse(ctx, response)
+			return
+		}
+
+		lib.SendErrorResponse(ctx, response)
 		return
 	}
 
@@ -171,53 +236,4 @@ func (contl *AuthController) Register(ctx *gin.Context) {
 	}
 
 	lib.SendSucceedResponse(ctx, &models.RegisterResponse{User: *user})
-}
-
-// Login godoc
-//
-//	@Summary	Login a user
-//	@Tags		Auth
-//	@Accept		json
-//	@Produce	json
-//	@Param		body	body		models.LoginRequest	true	"Login request"
-//	@Success	200		{object}	models.APIResponse{data=models.LoginResponse}
-//	@Failure	400		{object}	models.APIResponse
-//	@Router		/auth/login [post]
-func (contl *AuthController) Login(ctx *gin.Context) {
-	var req models.LoginRequest
-
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.Error(lib.InvalidBodyRequestError.WithStack(err.Error()))
-		return
-	}
-
-	user, err := contl.AuthService.Login(&req)
-	if err != nil {
-		ctx.Error(lib.InternalServerError.WithStack(err.Error()))
-		return
-	}
-
-	session := &models.Session{
-		UserID:    user.ID,
-		IpAddress: ctx.ClientIP(),
-		UserAgent: ctx.Request.UserAgent(),
-		ExpiredAt: lib.SESSION_EXPIRED_TIME,
-	}
-	session, err = contl.SessionService.CreateSession(session)
-	if err != nil {
-		ctx.Error(lib.InternalServerError.WithStack(err.Error()))
-		return
-	}
-
-	tokens, err := contl.AuthService.GenerateJwtTokens(&models.UserWithClaims{
-		User:      *user,
-		SessionID: session.ID,
-	})
-	if err != nil {
-		ctx.Error(lib.InternalServerError.WithStack(err.Error()))
-		return
-	}
-
-	ctx.SetCookie("rt", tokens.RefreshToken, int(lib.REFRESH_TOKEN_TTL_DURATION), "/", "", true, true)
-	lib.SendSucceedResponse(ctx, &models.LoginResponse{User: *user, AccessToken: tokens.AccessToken})
 }
